k8s/manifest/owncloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owncloud
  namespace: owncloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: owncloud
  template:
    metadata:
      labels:
        app: owncloud
    spec:
      containers:
        - name: owncloud
          image: owncloud/server:10.16
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: owncloud-files
              mountPath: /mnt/data
      volumes:
        - name: owncloud-files
          persistentVolumeClaim:
            claimName: owncloud-files-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: owncloud
  namespace: owncloud
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: owncloud
